# IonTorrent-VariantCaller

./: CMakeLists.txt  IonVersion.cpp.in  README.md  README.txt
BaseCaller/: TreephaserSSE.cpp
Util/: Utils.cpp
VariantCaller/: BAMWalkerEngine.cpp
VariantCaller/Bookkeeping/: ExtendParameters.cpp
debian/: README.Debian  changelog  control  copyright  rules
debian/patches/: bamtools.patch  cmake.patch  help.patch  hurd.patch  series  sse.patch
share/TVC/examples/example1/: reference.dict  reference.fasta  reference.fasta.fai  test.bam  test.bam.bai  test_original.bed  test_unmerged_detail.bed
share/TVC/examples/example1/expected/: TSVC_variants.vcf  small_variants.vcf
